Added Python3 support
Includes a tox.ini for testing against py27 and py34. Ignore test
credentials file.

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ pip-log.txt
 .coverage
 .tox
 nosetests.xml
+.venv*
 
 # Translations
 *.mo
@@ -33,3 +34,6 @@ nosetests.xml
 .mr.developer.cfg
 .project
 .pydevproject
+
+# Test credentials
+tests/accounts.py
